<resources>
    <string name="app_name">ShoeStore</string>


    <string name="fragment_login">Login</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Insert your email here</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Insert your password here</string>
    <string name="new_login_label">New login</string>
    <string name="existing_account_label">Existing account</string>

    <string name="fragment_welcome">Welcome</string>
    <string name="welcome_label">Welcome!</string>
    <string name="welcome_message_label">Welcome to our ShoeStore.</string>
    <string name="continue_label">Continue</string>

    <string name="fragment_instructions">Instructions</string>
    <string name="instructions_label">Instructions:</string>
    <string name="instructions_message_label">See our list and add a new shoe if you want.</string>

    <string name="fragment_shoe_listing">Shoe Listing</string>
    <string name="logout_label">Logout</string>
    <string name="add_new_shoe">Add new shoe</string>

    <string name="fragment_shoe_detail">Shoe Detail</string>
    <string name="name_label">Name</string>
    <string name="insert_shoe_name_label">Insert shoe name here</string>
    <string name="company_label">Company</string>
    <string name="insert_company_label">Insert company here</string>
    <string name="size_label">Size</string>
    <string name="insert_shoe_size_label">Insert shoe size here</string>
    <string name="description_label">Description</string>
    <string name="insert_description_label">Insert description here</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>

</resources>
