<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Add ViewModel to manage some actions -->

    <data>

        <variable
            name="viewModel"
            type="com.udacity.shoestore.MainViewModel" />
    </data>

    <!-- Use Scrollview if needed to see all information, which
     is displayed vertically in a LinearLayout-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_tv"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/name_et"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_shoe_name_label"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/company_tv"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_label"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/company_et"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_company_label"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/size_tv"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size_label"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/size_et"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_shoe_size_label"
                android:inputType="numberSigned"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/description_tv"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/description_et"
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_description_label"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

            <Button
                android:id="@+id/save_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/layout_margin"
                android:onClick="@{() -> viewModel.onSave()}"
                android:padding="@dimen/padding"
                android:text="@string/save_label"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/layout_margin"
                android:onClick="@{() -> viewModel.onCancel()}"
                android:padding="@dimen/padding"
                android:text="@string/cancel_label"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>
</layout>