<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <!-- LinearLayout to display the views vertically and centered in layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/email_tv"
            style="@style/NormalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/email_et"
            style="@style/NormalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/password_tv"
            style="@style/NormalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/password_et"
            style="@style/NormalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/new_login_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_login_label"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/padding"
            />

        <Button
            android:id="@+id/existing_account_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/existing_account_label"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/padding"
            />


    </LinearLayout>


</layout>