<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    android:label="@string/fragment_login"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.LoginFragment"
        android:label="@string/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.WelcomeFragment"
        android:label="@string/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.screens.InstructionsFragment"
        android:label="@string/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListingFragment"
        android:name="com.udacity.shoestore.screens.ShoeListingFragment"
        android:label="@string/fragment_shoe_listing">
        <action
            android:id="@+id/action_shoeListingFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_shoeListingFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.ShoeDetailFragment"
        android:label="@string/fragment_shoe_detail" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListingFragment"
            app:destination="@id/shoeListingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/navigation"
            app:popUpToInclusive="false"
            />
    </fragment>
</navigation>