<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- LinearLayout to display the views vertically and centered in layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/layout_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instructions_tv"
            style="@style/BigTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_label"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/instructions_message_tv"
            style="@style/NormalTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_message_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/continue_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_label"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/padding"
            />


    </LinearLayout>


</layout>